samples/nginx/nginx-deploy-https.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: 
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1

  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
      annotations:
        fluentbit.io/parser: nginx
    spec:
      containers:
      - image: nginx
        name: nginx-app
        imagePullPolicy: Always
        resources: {}
        ports:
        - containerPort: 443
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-config
        - mountPath: /etc/nginx/ssl
          name: nginx-tls
        - mountPath: /www
          name: nginx-www
      volumes: 
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: nginx-tls
        secret:
          secretName: nginx-tls
      - name: nginx-www
        configMap:
          name: nginx-www

      serviceAccount: nginx
      serviceAccountName: nginx

status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
spec:
        #type: LoadBalancer
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
